--- a/diseno-web.html
+++ b/diseno-web.html
@@ -227,6 +227,20 @@
                             <h2 class="texto-verde">Diseño Profesional de Páginas web</h2>
                         </div>
                         <p class="lead">Create a website that you are gonna be proud of. Be it Business, Portfolio, Agency, Photography, eCommerce &amp; much more.</p>
+                        <ul class="iconlist">
+                            <li class="lead" style="font-size:15px">
+                                <i class="icon-angle-right"></i> Icon List 1
+                            </li>
+                            <li class="lead" style="font-size:15px">
+                                <i class="icon-angle-right"></i> Icon List 2
+                            </li>
+                            <li class="lead" style="font-size:15px">
+                                <i class="icon-angle-right"></i> Icon List 3
+                            </li>
+                            <li class="lead" style="font-size:15px">
+                                <i class="icon-angle-right"></i> Icon List 4
+                            </li>
+                        </ul>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
@@ -239,54 +253,34 @@
                         </div>
                     </div>
                 </div>
-                <div class="line"></div>
-                <div class="heading-block center">
-                    <h2 class="texto-verde">Texto de relleno</h2>
-                </div>
-                <div class="row">
-                    <div class="col-lg-3 col-sm-6">
-                        <div class="feature-box fbox-center fbox-effect">
-                            <div class="fbox-icon">
-                                <a href="#">
-                                    <i class="i-alt">1</i>
-                                </a>
-                            </div>
-                            <h3 class="texto-verde">Conocemos tu idea</h3>
-                            <p>Aprendemos a visualizar lo que quieres para tu negocio en el <strong>mundo digital</strong>.</p>
+                <div class="container clearfix" style="margin-top: 100px">
+                    <div class="col_one_fourth nobottommargin center bounceIn animated" data-animate="bounceIn">
+                        <i class="i-plain i-xlarge divcenter nobottommargin icon-code texto-verde"></i>
+                        <div class="counter counter-lined">
+                            <span class="texto-azul" data-from="100" data-to="846" data-refresh-interval="50" data-speed="2000">846</span>
                         </div>
+                        <h5 class="t700">Lines of Codes</h5>
                     </div>
-                    <div class="col-lg-3 col-sm-6">
-                        <div class="feature-box fbox-center fbox-effect">
-                            <div class="fbox-icon">
-                                <a href="#">
-                                    <i class="i-alt">2</i>
-                                </a>
-                            </div>
-                            <h3 class="texto-verde"><strong>Diseñamos</strong></h3>
-                            <p>Transformamos tu idea en un diseño  unico para tu <strong>identidad web</strong></p>
+                    <div class="col_one_fourth nobottommargin center bounceIn animated" data-animate="bounceIn" data-delay="200">
+                        <i class="i-plain i-xlarge divcenter nobottommargin icon-magic texto-verde"></i>
+                        <div class="counter counter-lined">
+                            <span class="texto-azul" data-from="3000" data-to="15360" data-refresh-interval="100" data-speed="2500">15360</span>
                         </div>
+                        <h5 class="t700">KBs of HTML Files</h5>
                     </div>
-                    <div class="col-lg-3 col-sm-6">
-                        <div class="feature-box fbox-center fbox-effect">
-                            <div class="fbox-icon">
-                            <a href="#">
-                                  <i class="i-alt">3</i>
-                            </a>
-                            </div>
-                            <h3 class="texto-verde"><strong>Desarrollamos</strong></h3>
-                            <p>Contamos con una vasta experiencia en diseño de <strong>páginas web a su medida</strong>.</p>
+                    <div class="col_one_fourth nobottommargin center bounceIn animated" data-animate="bounceIn" data-delay="400">
+                        <i class="i-plain i-xlarge divcenter nobottommargin icon-file-text texto-verde"></i>
+                        <div class="counter counter-lined">
+                            <span class="texto-azul" data-from="10" data-to="386" data-refresh-interval="25" data-speed="3500">386</span>
                         </div>
+                        <h5 class="t700">No. of Templates</h5>
                     </div>
-                    <div class="col-lg-3 col-sm-6">
-                        <div class="feature-box fbox-center fbox-effect">
-                            <div class="fbox-icon">
-                                <a href="#">
-                                <i class="i-alt">4</i>
-                            </a>
-                            </div>
-                            <h3 class="texto-verde">Entregamos <strong>identidad</strong></h3>
-                            <p>Finalizamos todas tus ideas y las hacemos realidad al mejor <strong>precio</strong>.</p>
+                    <div class="col_one_fourth nobottommargin center col_last bounceIn animated" data-animate="bounceIn" data-delay="600">
+                        <i class="i-plain i-xlarge divcenter nobottommargin icon-time texto-verde"></i>
+                        <div class="counter counter-lined">
+                            <span class="texto-azul" data-from="60" data-to="1200" data-refresh-interval="30" data-speed="2700">1200</span>
                         </div>
+                        <h5 class="t700">Hours of Coding</h5>
                     </div>
                 </div>
                 <div class="line"></div>
@@ -306,6 +300,63 @@
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
                         </a>
+                    </div>
+                </div>
+                <div class="container clearfix">
+                    <div class="heading-block topmargin-lg center">
+                        <h2 class="texto-verde">Even more Feature Rich</h2>
+                        <span class="divcenter lead">Philanthropy convener livelihoods, initiative end hunger gender rights local. John Lennon storytelling; advocate, altruism impact catalyst.</span>
+                    </div>
+                    <div class="row bottommargin-sm">
+                        <div class="col-lg-4 col-md-6 bottommargin">
+                            <div class="feature-box fbox-right topmargin fadeIn animated" data-animate="fadeIn">
+                                <div class="fbox-icon">
+                                    <a href="#"><i class="icon-line-heart"></i></a>
+                                </div>
+                                <h3>Boxed &amp; Wide Layouts</h3>
+                                <p>Stretch your Website to the Full Width or make it boxed to surprise your visitors.</p>
+                            </div>
+                            <div class="feature-box fbox-right topmargin fadeIn animated" data-animate="fadeIn" data-delay="200">
+                                <div class="fbox-icon">
+                                    <a href="#"><i class="icon-line-paper"></i></a>
+                                </div>
+                                <h3>Extensive Documentation</h3>
+                                <p>We have covered each &amp; everything in our Docs including Videos &amp; Screenshots.</p>
+                            </div>
+                            <div class="feature-box fbox-right topmargin fadeIn animated" data-animate="fadeIn" data-delay="400">
+                                <div class="fbox-icon">
+                                    <a href="#"><i class="icon-line-layers"></i></a>
+                                </div>
+                                <h3>Parallax Support</h3>
+                                <p>Display your Content attractively using Parallax Sections with HTML5 Videos.</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 d-md-none d-lg-block bottommargin center">
+                            <img src="images/iphone7.png" alt="iphone 2">
+                        </div>
+                        <div class="col-lg-4 col-md-6 bottommargin">
+                            <div class="feature-box topmargin fadeIn animated" data-animate="fadeIn">
+                                <div class="fbox-icon">
+                                    <a href="#"><i class="icon-line-power"></i></a>
+                                </div>
+                                <h3>HTML5 Video</h3>
+                                <p>Canvas provides support for Native HTML5 Videos that can be added to a Background.</p>
+                            </div>
+                            <div class="feature-box topmargin fadeIn animated" data-animate="fadeIn" data-delay="200">
+                                <div class="fbox-icon">
+                                    <a href="#"><i class="icon-line-check"></i></a>
+                                </div>
+                                <h3>Endless Possibilities</h3>
+                                <p>Complete control on each &amp; every element that provides endless customization.</p>
+                            </div>
+                            <div class="feature-box topmargin fadeIn animated" data-animate="fadeIn" data-delay="400">
+                                <div class="fbox-icon">
+                                    <a href="#"><i class="icon-bulb"></i></a>
+                                </div>
+                                <h3>Light &amp; Dark Color Schemes</h3>
+                                <p>Change your Website's Primary Scheme instantly by simply adding the dark class.</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="line"></div>
