--- a/diseno-web.html
+++ b/diseno-web.html
@@ -161,7 +161,7 @@
                     </ul>
                     <ul class="one-page-menu" data-easing="easeInOutExpo" data-speed="1250" data-offset="160">
                         <li>
-                            <a href="#" data-href="#trabajos" data-offset="50">
+                            <a href="trabajos.html">
                                 <div>Trabajos</div>
                             </a>
                         </li>
@@ -198,10 +198,122 @@
             </div>
         </div>
     </header>
-    <section id="page-title" class="page-title-parallax" style="background-image: url('images/7.jpg'); padding: 220px 0;" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
-        <div class="container clearfix center">
-            <h1 class="texto-blanco" data-animate="fadeInUp">Page Title Parallax</h1>
-            <span class="texto-blanco" data-animate="fadeInUp" data-delay="300">A Short Page Title Tagline</span>
+    <section id="slider" class="slider-element revslider-wrap clearfix">
+		<div id="welcome_wrapper" class="rev_slider_wrapper fullscreen-container" data-alias="techco-header1" data-source="gallery" style="background:#000000;padding:0px;">
+			<div id="welcome" class="rev_slider fullscreenbanner" style="display:none;" data-version="5.4.5.2">
+                <ul>
+                    <li data-index="rs-240" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="1000"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
+                        <img src="rs-plugin/images/web2.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgparallax="4" class="rev-slidebg" data-no-retina>
+                        <!-- <div class="rs-background-video-layer"
+                            data-forcerewind="on"
+                            data-volume="mute"
+                            data-videowidth="100%"
+                            data-videoheight="100%"
+                            data-videomp4="rs-plugin/images/explore.mp4"
+                            data-videopreload="auto"
+                            data-videoloop="loop"
+                            data-forceCover="1"
+                            data-aspectratio="16:9"
+                            data-autoplay="true"
+                            data-autoplayonlyfirsttime="false">
+                        </div> -->
+                        <div class="tp-caption tp-shape tp-shapewrapper"
+                            id="slide-240-layer-7"
+                            data-x="['center','center','center','center']" 
+                            data-hoffset="['0','0','0','0']"
+                            data-y="['middle','middle','middle','middle']" 
+                            data-voffset="['0','0','0','0']"
+                            data-width="full"
+                            data-height="full"
+                            data-whitespace="nowrap"
+                            data-type="shape"
+                            data-basealign="slide"
+                            data-responsive_offset="off"
+                            data-responsive="off"
+                            data-frames='[{"delay":10,"speed":1000,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"frame":"999","to":"opacity:0;","ease":"Power4.easeInOut"}]'
+                            data-textAlign="['inherit','inherit','inherit','inherit']"
+                            data-paddingtop="[0,0,0,0]"
+                            data-paddingright="[0,0,0,0]"
+                            data-paddingbottom="[0,0,0,0]"
+                            data-paddingleft="[0,0,0,0]"
+                            data-blendmode="hard-light"
+                            style="z-index: 5;font-family:Open Sans;background:linear-gradient(90deg, rgba(41,112,255,0.75) 0%, rgba(46,216,163,0.75) 100%);"> 
+                        </div>
+                        <div class="tp-caption"
+                            id="slide-240-layer-10"
+                            data-x="['left','left','left','left']" 
+                            data-hoffset="['40','40','30','25']"
+                            data-y="['middle','middle','middle','middle']" 
+                            data-voffset="['-103','-102','-123','-152']"
+                            data-fontsize="['80','70','60','50']"
+                            data-lineheight="['80','70','60','50']"
+                            data-width="none"
+                            data-height="none"
+                            data-whitespace="nowrap"
+                            data-type="text"
+                            data-responsive_offset="off"
+                            data-responsive="off"
+                            data-frames='[{"delay":490,"speed":1500,"frame":"0","from":"x:[175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:1;","mask":"x:[-100%];y:0;s:inherit;e:inherit;","to":"o:1;","ease":"Power3.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
+                            data-textAlign="['inherit','inherit','inherit','inherit']"
+                            data-paddingtop="[0,0,0,0]"
+                            data-paddingright="[0,0,0,0]"
+                            data-paddingbottom="[0,0,0,0]"
+                            data-paddingleft="[0,0,0,0]"
+                            style="z-index: 6; white-space: nowrap; font-size: 80px; line-height: 80px; font-weight: 400; color: #ffffff; letter-spacing: 0px;font-family:Open Sans;">
+                            <i class="icon-plus"></i> 
+                        </div>
+                        <div class="tp-caption"
+                            id="slide-240-layer-1"
+                            data-x="['left','left','left','left']" 
+                            data-hoffset="['120','120','100','80']"
+                            data-y="['middle','middle','middle','middle']" 
+                            data-voffset="['-100','-100','-120','-150']"
+                            data-fontsize="['90','80','70','60']"
+                            data-lineheight="['90','80','70','60']"
+                            data-fontweight="['400','400','400','400']"
+                            data-letterspacing="['-5','-5','-5','-3']"
+                            data-width="['none','none','320','260']"
+                            data-height="none"
+                            data-whitespace="['nowrap','nowrap','nowrap','nowrap']"
+                            data-type="text"
+                            data-responsive_offset="off"
+                            data-responsive="off"
+                            data-frames='[{"delay":500,"speed":1500,"frame":"0","from":"x:[-175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:1;","mask":"x:[100%];y:0;s:inherit;e:inherit;","to":"o:1;","ease":"Power3.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"nothing"}]'
+                            data-textAlign="['left','left','left','left']"
+                            data-paddingtop="[0,0,0,0]"
+                            data-paddingright="[10,10,0,0]"
+                            data-paddingbottom="[0,0,0,0]"
+                            data-paddingleft="[0,0,0,0]"
+                            style="z-index: 7; min-width: 260px; max-width: 260px; font-size: 90px; line-height: 90px; font-weight: 900; color: rgba(255,255,255,1); letter-spacing: -5px;font-family:Open Sans;">
+                            <span style="font-weight:600;">Diseño</span> Web 
+                        </div>
+                        <div class="tp-caption"
+                            id="slide-240-layer-2"
+                            data-x="['left','left','left','left']" 
+                            data-hoffset="['120','120','100','80']"
+                            data-y="['middle','middle','middle','middle']" 
+                            data-voffset="['50','40','0','-60']"
+                            data-fontsize="['26','23','20','17']"
+                            data-lineheight="['35','30','25','22']"
+                            data-width="['640','481','320','260']"
+                            data-height="none"
+                            data-whitespace="normal"
+                            data-type="text"
+                            data-responsive_offset="off"
+                            data-responsive="off"
+                            data-frames='[{"delay":800,"speed":1500,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power4.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"nothing"}]'
+                            data-textAlign="['left','left','left','left']"
+                            data-paddingtop="[0,0,0,0]"
+                            data-paddingright="[0,0,0,0]"
+                            data-paddingbottom="[0,0,0,0]"
+                            data-paddingleft="[0,0,0,0]"
+                            style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 26px; line-height: 35px; font-weight: 300; color: #ffffff; letter-spacing: px;font-family:Open Sans;">
+                            Say Hello to the new web presence of your internet company. Usable, Customizable and Beautiful! 
+                        </div>
+                    </li>
+                </ul>
+                <div class="tp-bannertimer tp-bottom" style="visibility: hidden !important;"></div>
+            </div>
         </div>
     </section>
     <section id="content">
@@ -224,23 +336,9 @@
                 <div class="row clearfix">
                     <div class="col-lg-5">
                         <div class="heading-block topmargin">
-                            <h2 class="texto-verde">Diseño Profesional de Páginas web</h2>
+                            <h2 class="texto-verde">Diseño de Páginas web</h2>
                         </div>
                         <p class="lead">Create a website that you are gonna be proud of. Be it Business, Portfolio, Agency, Photography, eCommerce &amp; much more.</p>
-                        <ul class="iconlist">
-                            <li class="lead" style="font-size:15px">
-                                <i class="icon-angle-right"></i> Icon List 1
-                            </li>
-                            <li class="lead" style="font-size:15px">
-                                <i class="icon-angle-right"></i> Icon List 2
-                            </li>
-                            <li class="lead" style="font-size:15px">
-                                <i class="icon-angle-right"></i> Icon List 3
-                            </li>
-                            <li class="lead" style="font-size:15px">
-                                <i class="icon-angle-right"></i> Icon List 4
-                            </li>
-                        </ul>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
@@ -302,128 +400,8 @@
                         </a>
                     </div>
                 </div>
-                <div class="container clearfix">
-                    <div class="heading-block topmargin-lg center">
-                        <h2 class="texto-verde">Even more Feature Rich</h2>
-                        <span class="divcenter lead">Philanthropy convener livelihoods, initiative end hunger gender rights local. John Lennon storytelling; advocate, altruism impact catalyst.</span>
-                    </div>
-                    <div class="row bottommargin-sm">
-                        <div class="col-lg-4 col-md-6 bottommargin">
-                            <div class="feature-box fbox-right topmargin fadeIn animated" data-animate="fadeIn">
-                                <div class="fbox-icon">
-                                    <a href="#"><i class="icon-line-heart"></i></a>
-                                </div>
-                                <h3>Boxed &amp; Wide Layouts</h3>
-                                <p>Stretch your Website to the Full Width or make it boxed to surprise your visitors.</p>
-                            </div>
-                            <div class="feature-box fbox-right topmargin fadeIn animated" data-animate="fadeIn" data-delay="200">
-                                <div class="fbox-icon">
-                                    <a href="#"><i class="icon-line-paper"></i></a>
-                                </div>
-                                <h3>Extensive Documentation</h3>
-                                <p>We have covered each &amp; everything in our Docs including Videos &amp; Screenshots.</p>
-                            </div>
-                            <div class="feature-box fbox-right topmargin fadeIn animated" data-animate="fadeIn" data-delay="400">
-                                <div class="fbox-icon">
-                                    <a href="#"><i class="icon-line-layers"></i></a>
-                                </div>
-                                <h3>Parallax Support</h3>
-                                <p>Display your Content attractively using Parallax Sections with HTML5 Videos.</p>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 d-md-none d-lg-block bottommargin center">
-                            <img src="images/iphone7.png" alt="iphone 2">
-                        </div>
-                        <div class="col-lg-4 col-md-6 bottommargin">
-                            <div class="feature-box topmargin fadeIn animated" data-animate="fadeIn">
-                                <div class="fbox-icon">
-                                    <a href="#"><i class="icon-line-power"></i></a>
-                                </div>
-                                <h3>HTML5 Video</h3>
-                                <p>Canvas provides support for Native HTML5 Videos that can be added to a Background.</p>
-                            </div>
-                            <div class="feature-box topmargin fadeIn animated" data-animate="fadeIn" data-delay="200">
-                                <div class="fbox-icon">
-                                    <a href="#"><i class="icon-line-check"></i></a>
-                                </div>
-                                <h3>Endless Possibilities</h3>
-                                <p>Complete control on each &amp; every element that provides endless customization.</p>
-                            </div>
-                            <div class="feature-box topmargin fadeIn animated" data-animate="fadeIn" data-delay="400">
-                                <div class="fbox-icon">
-                                    <a href="#"><i class="icon-bulb"></i></a>
-                                </div>
-                                <h3>Light &amp; Dark Color Schemes</h3>
-                                <p>Change your Website's Primary Scheme instantly by simply adding the dark class.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="line"></div>
-                <div id="testimonios">
-                    <div class="heading-block center">
-                        <h2 class="texto-verde"><b>Clientes</b> que han confiado en nosotros.</h2>
-                    </div>
-                    <div id="oc-testi" class="owl-carousel testimonials-carousel carousel-widget clearfix" data-margin="0" data-pagi="true" data-loop="true" data-center="true" data-autoplay="5000" data-items-sm="1" data-items-md="2" data-items-xl="3">
-                        <div class="oc-item">
-                            <div class="testimonial">
-                                <div class="testi-content">
-                                    <p>Incidunt deleniti blanditiis quas aperiam recusandae consequatur ullam quibusdam cum libero illo rerum repellendus!</p>
-                                    <div class="testi-meta">
-                                        John Doe
-                                        <span>XYZ Inc.</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="oc-item">
-                            <div class="testimonial">
-                                <div class="testi-content">
-                                    <p>Natus voluptatum enim quod necessitatibus quis expedita harum provident eos obcaecati id culpa corporis molestias.</p>
-                                    <div class="testi-meta">
-                                        Collis Ta'eed
-                                        <span>Envato Inc.</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="oc-item">
-                            <div class="testimonial">
-                                <div class="testi-content">
-                                    <p>Natus voluptatum enim quod necessitatibus quis expedita harum provident eos obcaecati id culpa corporis molestias.</p>
-                                    <div class="testi-meta">
-                                        Collis Ta'eed
-                                        <span>Envato Inc.</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="oc-item">
-                            <div class="testimonial">
-                                <div class="testi-content">
-                                    <p>Natus voluptatum enim quod necessitatibus quis expedita harum provident eos obcaecati id culpa corporis molestias.</p>
-                                    <div class="testi-meta">
-                                        Mary Jane
-                                        <span>Google Inc.</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="oc-item">
-                            <div class="testimonial">
-                                <div class="testi-content">
-                                    <p>Natus voluptatum enim quod necessitatibus quis expedita harum provident eos obcaecati id culpa corporis molestias.</p>
-                                    <div class="testi-meta">
-                                        Steve Jobs
-                                        <span>Apple Inc.</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
-         </div>
+        </div>
     </section>
     <footer id="footer" class="bg-azul">
         <div class="container">
