--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     </ul>
                     <ul class="one-page-menu" data-easing="easeInOutExpo" data-speed="1250" data-offset="160">
                         <li>
-                            <a href="#" data-href="#trabajos" data-offset="50">
+                            <a href="trabajos.html">
                                 <div>Trabajos</div>
                             </a>
                         </li>
