--- a/trabajos.html
+++ b/trabajos.html
@@ -285,7 +285,7 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             style="z-index: 7; min-width: 260px; max-width: 260px; font-size: 90px; line-height: 90px; font-weight: 900; color: rgba(255,255,255,1); letter-spacing: -5px;font-family:Open Sans;">
-                            <span style="font-weight:600;">Marketing</span> Digital 
+                            <span style="font-weight:600;">Mira nuestro</span> Portafolio 
                         </div>
                         <div class="tp-caption"
                             id="slide-240-layer-2"
