--- a/diseno-grafico.html
+++ b/diseno-grafico.html
@@ -113,46 +113,46 @@
                 </div>
                 <div id="logo">
                     <a href="index.html" class="standard-logo" data-sticky-logo="images/logos/logo.png">
-                        <img src="images/logos/logoblanco.png" alt="CreativosPlus">
+                        <img style="margin-right:50px" src="images/logos/logoblanco.png" alt="CreativosPlus">
                     </a>
                     <a href="index.html" class="retina-logo" data-sticky-logo="images/logos/logo.png">
-                        <img src="images/logos/logoblanco.png" alt="CreativosPlus">
+                        <img style="margin-right:50px" src="images/logos/logoblanco.png" alt="CreativosPlus">
                     </a>
                 </div>
                 <nav id="primary-menu" class="with-arrows clearfix not-dark">
                     <ul class="one-page-menu" data-easing="easeInOutExpo" data-speed="1250" data-offset="160">
                         <li>
-                            <a href="#" data-href="">
+                            <a href="index.html">
                                 <div>Home</div>
                             </a>
                         </li>
                         <li>
-                            <a href="#" data-href="">
+                            <a href="nosotros.html">
                                 <div>Nosotros</div>
                             </a>
                         </li>
                         <li>
-                            <a href="#" data-href="">
+                            <a href="#">
                                 <div>Servicios</div>
                             </a>
                             <ul class="colorLink">
                                 <li>
-                                    <a href="#" data-href="">
+                                    <a href="diseno-web.html">
                                         <div>Diseño Web</div>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" data-href="">
+                                    <a href="diseno-grafico.html">
                                         <div>Diseño Gráfico</div>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" data-href="">
+                                    <a href="marketing.html">
                                         <div>Marketing Digital</div>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" data-href="">
+                                    <a href="seo.html">
                                         <div>SEO</div>
                                     </a>
                                 </li>
@@ -161,28 +161,34 @@
                     </ul>
                     <ul class="one-page-menu" data-easing="easeInOutExpo" data-speed="1250" data-offset="160">
                         <li>
-                            <a href="#" data-href="">
+                            <a href="trabajos.html">
                                 <div>Trabajos</div>
                             </a>
                         </li>
                         <li>
-                            <a href="#" data-href="">
+                            <a href="#" data-href="#footer">
                                 <div>Contacto</div>
                             </a>
                         </li>
                         <li>
-                            <a href="#" data-href="">
+                            <a href="#">
                                 <div>Idioma</div>
                             </a>
                             <ul class="colorLink">
                                 <li>
-                                    <a href="#" data-href="">
-                                        <div>Español</div>
+                                    <a href="index.html">
+                                        <div>
+                                            <img src="images/icons/spain.png" width="20" height="20" style="margin-right: 5px" alt="">
+                                            Español
+                                        </div>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" data-href="">
-                                        <div>Ingles</div>
+                                    <a href="us/index.html">
+                                        <div>
+                                            <img src="images/icons/usa.png" width="20" height="20" style="margin-right: 5px" alt="">
+                                            Ingles
+                                        </div>
                                     </a>
                                 </li>
                             </ul>
@@ -192,15 +198,122 @@
             </div>
         </div>
     </header>
-    <section id="page-title" class="page-title-parallax" style="background-image: url('images/7.jpg'); padding: 220px 0;" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
-        <div class="container clearfix">
-            <h1 data-animate="fadeInUp">Page Title Parallax</h1>
-            <span data-animate="fadeInUp" data-delay="300">A Short Page Title Tagline</span>
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Home</a></li>
-                <li class="breadcrumb-item"><a href="#">Shortcodes</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Page Titles</li>
-            </ol>
+    <section id="slider" class="slider-element revslider-wrap clearfix">
+		<div id="welcome_wrapper" class="rev_slider_wrapper fullscreen-container" data-alias="techco-header1" data-source="gallery" style="background:#000000;padding:0px;">
+			<div id="welcome" class="rev_slider fullscreenbanner" style="display:none;" data-version="5.4.5.2">
+                <ul>
+                    <li data-index="rs-240" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="1000"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
+                        <img src="rs-plugin/images/web2.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgparallax="4" class="rev-slidebg" data-no-retina>
+                        <!-- <div class="rs-background-video-layer"
+                            data-forcerewind="on"
+                            data-volume="mute"
+                            data-videowidth="100%"
+                            data-videoheight="100%"
+                            data-videomp4="rs-plugin/images/explore.mp4"
+                            data-videopreload="auto"
+                            data-videoloop="loop"
+                            data-forceCover="1"
+                            data-aspectratio="16:9"
+                            data-autoplay="true"
+                            data-autoplayonlyfirsttime="false">
+                        </div> -->
+                        <div class="tp-caption tp-shape tp-shapewrapper"
+                            id="slide-240-layer-7"
+                            data-x="['center','center','center','center']" 
+                            data-hoffset="['0','0','0','0']"
+                            data-y="['middle','middle','middle','middle']" 
+                            data-voffset="['0','0','0','0']"
+                            data-width="full"
+                            data-height="full"
+                            data-whitespace="nowrap"
+                            data-type="shape"
+                            data-basealign="slide"
+                            data-responsive_offset="off"
+                            data-responsive="off"
+                            data-frames='[{"delay":10,"speed":1000,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"frame":"999","to":"opacity:0;","ease":"Power4.easeInOut"}]'
+                            data-textAlign="['inherit','inherit','inherit','inherit']"
+                            data-paddingtop="[0,0,0,0]"
+                            data-paddingright="[0,0,0,0]"
+                            data-paddingbottom="[0,0,0,0]"
+                            data-paddingleft="[0,0,0,0]"
+                            data-blendmode="hard-light"
+                            style="z-index: 5;font-family:Open Sans;background:linear-gradient(90deg, rgba(41,112,255,0.75) 0%, rgba(46,216,163,0.75) 100%);"> 
+                        </div>
+                        <div class="tp-caption"
+                            id="slide-240-layer-10"
+                            data-x="['left','left','left','left']" 
+                            data-hoffset="['40','40','30','25']"
+                            data-y="['middle','middle','middle','middle']" 
+                            data-voffset="['-103','-102','-123','-152']"
+                            data-fontsize="['80','70','60','50']"
+                            data-lineheight="['80','70','60','50']"
+                            data-width="none"
+                            data-height="none"
+                            data-whitespace="nowrap"
+                            data-type="text"
+                            data-responsive_offset="off"
+                            data-responsive="off"
+                            data-frames='[{"delay":490,"speed":1500,"frame":"0","from":"x:[175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:1;","mask":"x:[-100%];y:0;s:inherit;e:inherit;","to":"o:1;","ease":"Power3.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
+                            data-textAlign="['inherit','inherit','inherit','inherit']"
+                            data-paddingtop="[0,0,0,0]"
+                            data-paddingright="[0,0,0,0]"
+                            data-paddingbottom="[0,0,0,0]"
+                            data-paddingleft="[0,0,0,0]"
+                            style="z-index: 6; white-space: nowrap; font-size: 80px; line-height: 80px; font-weight: 400; color: #ffffff; letter-spacing: 0px;font-family:Open Sans;">
+                            <i class="icon-plus"></i> 
+                        </div>
+                        <div class="tp-caption"
+                            id="slide-240-layer-1"
+                            data-x="['left','left','left','left']" 
+                            data-hoffset="['120','120','100','80']"
+                            data-y="['middle','middle','middle','middle']" 
+                            data-voffset="['-100','-100','-120','-150']"
+                            data-fontsize="['90','80','70','60']"
+                            data-lineheight="['90','80','70','60']"
+                            data-fontweight="['400',400','400','400']"
+                            data-letterspacing="['-5','-5','-5','-3']"
+                            data-width="['none','none','320','260']"
+                            data-height="none"
+                            data-whitespace="['nowrap','nowrap','nowrap','nowrap']"
+                            data-type="text"
+                            data-responsive_offset="off"
+                            data-responsive="off"
+                            data-frames='[{"delay":500,"speed":1500,"frame":"0","from":"x:[-175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:1;","mask":"x:[100%];y:0;s:inherit;e:inherit;","to":"o:1;","ease":"Power3.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"nothing"}]'
+                            data-textAlign="['left','left','left','left']"
+                            data-paddingtop="[0,0,0,0]"
+                            data-paddingright="[10,10,0,0]"
+                            data-paddingbottom="[0,0,0,0]"
+                            data-paddingleft="[0,0,0,0]"
+                            style="z-index: 7; min-width: 300px; max-width: 300px; font-size: 90px; line-height: 90px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: -5px;font-family:Open Sans;">
+                            <span style="font-weight:600;">Diseño</span> Gráfico   
+                        </div>
+                        <div class="tp-caption"
+                            id="slide-240-layer-2"
+                            data-x="['left','left','left','left']" 
+                            data-hoffset="['120','120','100','80']"
+                            data-y="['middle','middle','middle','middle']" 
+                            data-voffset="['50','40','0','-60']"
+                            data-fontsize="['26','23','20','17']"
+                            data-lineheight="['35','30','25','22']"
+                            data-width="['640','481','320','260']"
+                            data-height="none"
+                            data-whitespace="normal"
+                            data-type="text"
+                            data-responsive_offset="off"
+                            data-responsive="off"
+                            data-frames='[{"delay":800,"speed":1500,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power4.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"nothing"}]'
+                            data-textAlign="['left','left','left','left']"
+                            data-paddingtop="[0,0,0,0]"
+                            data-paddingright="[0,0,0,0]"
+                            data-paddingbottom="[0,0,0,0]"
+                            data-paddingleft="[0,0,0,0]"
+                            style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 26px; line-height: 35px; font-weight: 300; color: #ffffff; letter-spacing: px;font-family:Open Sans;">
+                            Say Hello to the new web presence of your internet company. Usable, Customizable and Beautiful! 
+                        </div>
+                    </li>
+                </ul>
+                <div class="tp-bannertimer tp-bottom" style="visibility: hidden !important;"></div>
+            </div>
         </div>
     </section>
     <section id="content">
@@ -217,22 +330,6 @@
                 <i class="icon-whatsapp"></i>
                 <i class="icon-whatsapp"></i>
             </a>
-        </div>
-        <div id="servicios" class="section nomargin noborder">
-            <div class="container clearfix">
-                <div class="col_three_fifth">
-                    <div class="heading-block">
-                        <h3 class="texto-verde">Diseño de gráfico profesional</h3>
-                        <span>Benchmarking your website's performance helps you make great choices for your business.</span>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero quod consequuntur quibusdam, enim expedita sed quia nesciunt incidunt accusamus necessitatibus modi adipisci officia libero accusantium esse hic, obcaecati, ullam, laboriosam!</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti vero, animi suscipit id facere officia. Aspernatur, quo, quos nisi dolorum aperiam fugiat deserunt velit rerum laudantium cum magnam excepturi quod, fuga architecto provident, cupiditate delectus voluptate eaque! Sit neque ut eum, voluptatibus odit cum dolorum ipsa voluptates inventore cumque a.</p>
-                    <!-- <a href="#">Learn more &rarr;</a> -->
-                </div>
-                <div class="col_two_fifth topmargin col_last" style="min-height: 350px">
-                    <img src="images/servicios/servicio2.png" alt="">
-                </div>
-            </div>
         </div>
     </section>
     <footer id="footer" class="bg-azul">
